logs/pub_sub2/build.make.029.log.stderr
/home/ros-industrial/HW8/src/pub_sub2/src/pubvel_smart.cpp: In function ‘void positionT(const Pose&)’:
/home/ros-industrial/HW8/src/pub_sub2/src/pubvel_smart.cpp:9:7: error: ‘msg2’ was not declared in this scope
   k.x=msg2.x;
       ^
make[2]: *** [CMakeFiles/pubvel_smart.dir/src/pubvel_smart.cpp.o] Error 1
make[1]: *** [CMakeFiles/pubvel_smart.dir/all] Error 2
make: *** [all] Error 2
